--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
 		"php": ">=8.1",
 		"ext-ctype": "*",
 		"ext-iconv": "*",
-		"api-platform/core": "~2.6.8",
+		"api-platform/core": "^2.6.8",
 		"atelierspierrot/famfamfam-silk-sprite": "^1.0",
-		"doctrine/annotations": "^1.13",
+		"doctrine/annotations": "^2.0",
 		"doctrine/doctrine-bundle": "^2.7",
 		"doctrine/doctrine-fixtures-bundle": "^3.4",
 		"doctrine/doctrine-migrations-bundle": "^3.2",
@@ -48,36 +48,36 @@
 		"sensio/framework-extra-bundle": "^6.2",
 		"sonata-project/exporter": "^2.13",
 		"stof/doctrine-extensions-bundle": "^1.7",
-		"symfony/asset": "6.1.*",
-		"symfony/console": "6.1.*",
-		"symfony/doctrine-messenger": "6.1.*",
-		"symfony/dotenv": "6.1.*",
-		"symfony/expression-language": "6.1.*",
+		"symfony/asset": "6.2.*",
+		"symfony/console": "6.2.*",
+		"symfony/doctrine-messenger": "6.2.*",
+		"symfony/dotenv": "6.2.*",
+		"symfony/expression-language": "6.2.*",
 		"symfony/flex": "^2",
-		"symfony/form": "6.1.*",
-		"symfony/framework-bundle": "6.1.*",
-		"symfony/http-client": "6.1.*",
-		"symfony/intl": "6.1.*",
-		"symfony/ldap": "6.1.*",
-		"symfony/mailer": "6.1.*",
-		"symfony/mime": "6.1.*",
+		"symfony/form": "6.2.*",
+		"symfony/framework-bundle": "6.2.*",
+		"symfony/http-client": "6.2.*",
+		"symfony/intl": "6.2.*",
+		"symfony/ldap": "6.2.*",
+		"symfony/mailer": "6.2.*",
+		"symfony/mime": "6.2.*",
 		"symfony/monolog-bundle": "^3.8",
-		"symfony/notifier": "6.1.*",
-		"symfony/process": "6.1.*",
-		"symfony/property-access": "6.1.*",
-		"symfony/property-info": "6.1.*",
-		"symfony/proxy-manager-bridge": "6.1.*",
-		"symfony/runtime": "6.1.*",
-		"symfony/security-bundle": "6.1.*",
-		"symfony/serializer": "6.1.*",
-		"symfony/string": "6.1.*",
-		"symfony/translation": "6.1.*",
-		"symfony/twig-bundle": "6.1.*",
-		"symfony/validator": "6.1.*",
-		"symfony/web-link": "6.1.*",
+		"symfony/notifier": "6.2.*",
+		"symfony/process": "6.2.*",
+		"symfony/property-access": "6.2.*",
+		"symfony/property-info": "6.2.*",
+		"symfony/proxy-manager-bridge": "6.2.*",
+		"symfony/runtime": "6.2.*",
+		"symfony/security-bundle": "6.2.*",
+		"symfony/serializer": "6.2.*",
+		"symfony/string": "6.2.*",
+		"symfony/translation": "6.2.*",
+		"symfony/twig-bundle": "6.2.*",
+		"symfony/validator": "6.2.*",
+		"symfony/web-link": "6.2.*",
 		"symfony/webapp-meta": "^1.0",
 		"symfony/webpack-encore-bundle": "^1.16",
-		"symfony/yaml": "6.1.*",
+		"symfony/yaml": "6.2.*",
 		"twig/extra-bundle": "^3.4",
 		"twig/twig": "^3.4"
 	},
@@ -134,7 +134,7 @@
 	"extra": {
 		"symfony": {
 			"allow-contrib": false,
-			"require": "6.1.*"
+			"require": "6.2.*"
 		},
 		"installer-types": [
 			"jslib-zip",
@@ -151,7 +151,7 @@
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-latest",
-		"liip/functional-test-bundle": "4.6.0-alpha1",
+		"liip/functional-test-bundle": "4.10.0",
 		"liip/test-fixtures-bundle": "^2.4",
 		"phpstan/extension-installer": "^1.2",
 		"phpstan/phpstan": "^1.8",
@@ -160,11 +160,11 @@
 		"phpstan/phpstan-strict-rules": "^1.4",
 		"phpstan/phpstan-symfony": "^1.2",
 		"spaze/phpstan-disallowed-calls": "^2.8",
-		"symfony/debug-bundle": "6.1.*",
+		"symfony/debug-bundle": "6.2.*",
 		"symfony/maker-bundle": "^1.47",
 		"symfony/phpunit-bridge": "^6.1",
-		"symfony/stopwatch": "6.1.*",
-		"symfony/web-profiler-bundle": "6.1.*"
+		"symfony/stopwatch": "6.2.*",
+		"symfony/web-profiler-bundle": "6.2.*"
 	},
 	"repositories": [
 		{
