--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
     "devDependencies": {
-        "@hotwired/stimulus": "^3.0.0",
-        "@symfony/stimulus-bridge": "^3.0.0",
-        "@symfony/webpack-encore": "^2.0.0",
-        "core-js": "^3.0.0",
+        "@babel/core": "^7.22.20",
+        "@babel/preset-env": "^7.22.20",
+        "@hotwired/stimulus": "^3.2.2",
+        "@mcler/webpack-concat-plugin": "^4.1.5",
+        "@symfony/stimulus-bridge": "^3.2.2",
+        "@symfony/webpack-encore": "^4.4.0",
+        "core-js": "^3.32.2",
         "file-loader": "^6.0.0",
-        "postcss-loader": "^6.0.0",
+        "html-webpack-plugin": "^5.5.3",
+        "postcss-loader": "^7.3.3",
         "postcss-url": "^10.1.3",
-        "regenerator-runtime": "^0.13.2",
+        "regenerator-runtime": "^0.14.0",
+        "webpack": "^5.88.2",
+        "webpack-cli": "^5.1.4",
         "webpack-notifier": "^1.6.0",
         "webpack-spritesmith": "^1.1.0"
     },
@@ -19,8 +25,5 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
-    "dependencies": {
-        "@mcler/webpack-concat-plugin": "^4.1.5",
-        "html-webpack-plugin": "^5.5.0"
-    }
+    "dependencies": {}
 }
